// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header styles should render and match snapshot for mobileOnly styles 1`] = `
.circuit-0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 64px;
  background-color: var(--cui-bg-strong);
  padding: 16px;
  z-index: 600;
  position: -webkit-sticky;
  position: sticky;
}

@media (min-width: 960px) {
  .circuit-0 {
    display: none;
  }
}

.circuit-1 {
  font-size: 1.125rem;
  line-height: 1.5rem;
  font-weight: 700;
  color: var(--cui-fg-on-strong);
  margin-left: 16px;
}

<div
  class="circuit-0"
  data-testid="child"
>
  Text
  <h1
    class="circuit-1"
  >
    Title
  </h1>
</div>
`;

exports[`Header styles should render with default styles 1`] = `
.circuit-0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 64px;
  background-color: var(--cui-bg-strong);
  padding: 16px;
  z-index: 600;
  position: -webkit-sticky;
  position: sticky;
}

.circuit-1 {
  font-size: 1.125rem;
  line-height: 1.5rem;
  font-weight: 700;
  color: var(--cui-fg-on-strong);
  margin-left: 16px;
}

<div
  class="circuit-0"
  data-testid="child"
>
  Text
  <h1
    class="circuit-1"
  >
    Title
  </h1>
</div>
`;
